<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_item"
        android:icon="@drawable/ic_search_black"
        android:title="@string/search_menu_text"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort_item"
        android:icon="@drawable/ic_sort_black"
        android:title="@string/sort_menu_text"
        app:showAsAction="ifRoom">
        <!-- "file" submenu -->
        <menu>
            <item android:id="@+id/item_name"
                android:icon="@drawable/ic_arrow_downward"
                android:title="@string/filter_by_name" />
            <item android:id="@+id/item_created_at"
                android:icon="@drawable/ic_arrow_upward"
                android:title="@string/filter_by_created" />
            <item android:id="@+id/item_updated_at"
                android:icon="@drawable/ic_arrow_upward"
                android:title="@string/filter_by_updated" />
            <item android:id="@+id/item_checked"
                android:icon="@drawable/ic_arrow_upward"
                android:title="@string/filter_by_checked" />
        </menu>
    </item>
</menu>